# bLog

./: .gitignore  Cargo.toml  LICENSE  README.md  log4rs.yaml
.github/workflows/: rust.yml
src/: app.rs  event_handler.rs  lib.rs  main.rs  tui.rs  ui.rs
src/app/: app.rs  app_result.rs  mod.rs
src/app/logs/: log_view.rs  log_view_service.rs  log_viewer.rs  mod.rs  raw_logs.rs
src/framework/: arg_parser.rs  event_proxy.rs  handlers.rs  mod.rs  tui_manager.rs
src/logs/: raw_logs.rs
src/ui/: main_component.rs  mod.rs
