[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
log = "0.4.21"
log4rs = "1.3.0"
ratatui = "0.26.1"
tempfile = "3.10.1"

